Introduce showExtremeNotes. First step towards #2

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             .width(width)
             .height(height * 3)
             .tooltip(tip)
+            .showExtremeNotes(true)
             .connect(signal)
         ;
         colorLegend
