Add the notestrip module.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <script src="js/legend.js"></script>
   <script src="js/notescanvas.js"></script>
   <script src="js/notesbook.js"></script>
+  <script src="js/notestrip.js"></script>
   <script src="js/notesnav.js"></script>
   <script src="js/combineSeparateUI.js"></script>
   <script src="js/extremeNotesUI.js"></script>
