Add skeleton for SVG export

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             <div class="panel-footer">
               <div id="notes-ui"></div>
               <div id="ribbons-ui"></div>
+              <div id="export-ui">
+                <div class="fixed-action-button">
+                  <button class="mdl-button mdl-button--primary">
+                    <i class="material-icons">file_download</i>
+                  </button>
+                </div>
+              </div>
             </div><!--.panel-footer-->
           </div><!--.panel-->
         </div><!--.col-xs-12.col-lg-2-->
